- Update with triggering favorite clubs.

--- a/app/src/main/res/layout/activity_detail_match.xml
+++ b/app/src/main/res/layout/activity_detail_match.xml
@@ -35,7 +35,7 @@
         android:layout_marginStart="25dp"
         android:layout_marginTop="50dp"
         android:layout_marginEnd="25dp"
-        android:text="-"
+        android:text="@string/dash"
         android:textColor="@android:color/black"
         android:textSize="50sp"
         app:layout_constraintEnd_toStartOf="@+id/ivDetailAwayTeam"
@@ -48,7 +48,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="30dp"
         android:fontFamily="@font/abel"
-        android:text="28-12-2019 13:30"
+        android:text="@string/matchDate"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -59,7 +59,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
         android:fontFamily="@font/abel"
-        android:text="Brighton"
+        android:text="@string/home_team"
         android:textColor="@android:color/black"
         app:layout_constraintEnd_toEndOf="@+id/ivDetailHomeTeam"
         app:layout_constraintStart_toStartOf="@+id/ivDetailHomeTeam"
@@ -71,7 +71,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="10dp"
         android:fontFamily="@font/abel"
-        android:text="Bournemouth"
+        android:text="@string/away_team"
         android:textColor="@android:color/black"
         app:layout_constraintEnd_toEndOf="@+id/ivDetailAwayTeam"
         app:layout_constraintStart_toStartOf="@+id/ivDetailAwayTeam"
