--- a/app/src/main/res/layout/fragment_add_club.xml
+++ b/app/src/main/res/layout/fragment_add_club.xml
@@ -31,7 +31,7 @@
                 android:id="@+id/etClubName"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:hint="Name of the club" />
+                android:hint="@string/name_of_the_club" />
         </com.google.android.material.textfield.TextInputLayout>
 
     </com.google.android.material.card.MaterialCardView>
