--- a/app/src/main/res/layout/match_item.xml
+++ b/app/src/main/res/layout/match_item.xml
@@ -16,7 +16,7 @@
         android:layout_marginStart="8dp"
         android:layout_marginTop="6dp"
         android:fontFamily="@font/abel"
-        android:text="Almere City"
+        android:text="@string/home_team"
         android:textColor="@android:color/black"
         android:textSize="12sp"
         app:layout_constraintStart_toEndOf="@+id/ivHomeTeam"
@@ -29,7 +29,7 @@
         android:layout_marginStart="8dp"
         android:layout_marginTop="6dp"
         android:fontFamily="@font/abel"
-        android:text="TOP Oss"
+        android:text="@string/home_team"
         android:textColor="@android:color/black"
         android:textSize="12sp"
         app:layout_constraintStart_toEndOf="@+id/ivAwayTeam"
@@ -65,7 +65,7 @@
         android:layout_height="wrap_content"
         android:layout_marginEnd="16dp"
         android:fontFamily="@font/abel"
-        android:text="20:00"
+        android:text="@string/playtime"
         android:textColor="@android:color/black"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/tvOddsDraw"
@@ -79,7 +79,7 @@
         android:layout_marginEnd="8dp"
         android:layout_marginBottom="2dp"
         android:fontFamily="@font/abel"
-        android:text="3.15"
+        android:text="@string/odds_draw"
         android:textColor="@android:color/black"
         android:textSize="12sp"
         app:layout_constraintBottom_toTopOf="@+id/tvOddsAway"
@@ -92,7 +92,7 @@
         android:layout_height="wrap_content"
         android:layout_marginEnd="8dp"
         android:fontFamily="@font/abel"
-        android:text="1.95"
+        android:text="@string/odds_home"
         android:textColor="@android:color/black"
         android:textSize="12sp"
         app:layout_constraintEnd_toEndOf="parent"
@@ -104,7 +104,7 @@
         android:layout_height="wrap_content"
         android:layout_marginEnd="8dp"
         android:fontFamily="@font/abel"
-        android:text="4.05"
+        android:text="@string/odds_away"
         android:textColor="@android:color/black"
         android:textSize="12sp"
         app:layout_constraintBottom_toBottomOf="parent"
