- Adding My matches page. - EXTRA: List the matches of your favorite club.

--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -10,4 +10,9 @@
         android:id="@+id/clubFragment"
         android:icon="@drawable/club"
         android:title="@string/clubs" />
+    <item
+        android:id="@+id/favoriteFragment"
+        android:icon="@drawable/favorite_icon"
+        android:title="@string/my_matches" />
+
 </menu>
