--- a/app/src/main/res/navigation/navigation_graph.xml
+++ b/app/src/main/res/navigation/navigation_graph.xml
@@ -30,7 +30,7 @@
     </fragment>
     <fragment
         android:id="@+id/favoriteFragment"
-        android:name="hva.nl.footballodds.ui.fragments.FavoriteClubFragment"
+        android:name="hva.nl.footballodds.ui.fragments.FavoriteMatchFragment"
         android:label="fragment_favorite"
         tools:layout="@layout/fragment_favorite_matches" />
 </navigation>
