--- a/app/src/main/res/layout/fragment_add_club.xml
+++ b/app/src/main/res/layout/fragment_add_club.xml
@@ -31,8 +31,26 @@
                 android:id="@+id/etClubName"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintBottom_toBottomOf="parent"
                 android:hint="@string/name_of_the_club" />
         </com.google.android.material.textfield.TextInputLayout>
+
+        <Button
+            android:id="@+id/btnImagePick"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="5dp"
+            android:layout_marginTop="100dp"
+            android:layout_marginBottom="5dp"
+            android:text="@string/pick_image" />
+
+        <ImageView
+            android:id="@+id/ivSelectedImage"
+            android:layout_width="75dp"
+            android:layout_height="75dp"
+            android:layout_marginStart="120dp"
+            android:layout_marginTop="70dp" />
 
     </com.google.android.material.card.MaterialCardView>
 
