--- a/app/src/main/res/layout/match_item.xml
+++ b/app/src/main/res/layout/match_item.xml
@@ -29,7 +29,7 @@
         android:layout_marginStart="8dp"
         android:layout_marginTop="6dp"
         android:fontFamily="@font/abel"
-        android:text="@string/home_team"
+        android:text="@string/away_team"
         android:textColor="@android:color/black"
         android:textSize="12sp"
         app:layout_constraintStart_toEndOf="@+id/ivAwayTeam"
@@ -43,7 +43,6 @@
         android:layout_marginTop="4dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/ic_launcher_background"
         android:background="@drawable/round_outline" />
 
     <ImageView
@@ -56,7 +55,6 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/ivHomeTeam"
-        app:srcCompat="@drawable/ic_launcher_background"
         android:background="@drawable/round_outline"/>
 
     <TextView
